Updated project description

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <h3><a href="http://mimmackk.github.io/unitball">Graphing the p-Norm Unit Ball in 3 Dimensions</a></h3>
           <p>
             <a href="http://github.com/mimmackk/unitball">GitHub</a>
-            A walk through the problem-solving process of graphing the p-norm unit ball in 3D with the Plotly graphing library in Python.
+            How to graph a sphere, a cube, an octahedron, and every continuous shape in between with one function: A walk through the problem-solving process of graphing the p-norm unit ball in 3D using the Plotly graphing library in Python (and JavaScript).
           </p>
           <a href="http://mimmackk.github.io/unitball"><img src="https://raw.githubusercontent.com/mimmackk/unitball/master/head.jpg" alt="Screenshot of project"></a>
         </li>
