--- a/index.html
+++ b/index.html
@@ -54,12 +54,13 @@
       <h2>Math Visualizations</h2>
       <ul>
         <li>
-          <h3><a href="http://mimmackk.github.io/unitball">Graphing the p-Norm Unit Ball in 3 Dimensions</a></h3>
+          <h3><a href="https://observablehq.com/@mimmackk/unitball">How to Graph the p-Norm Unit Ball in 3D</a></h3>
           <p>
-            <a href="http://github.com/mimmackk/unitball">GitHub</a>
-            How to graph a sphere, a cube, an octahedron, and every continuous shape in between with one function: A walk through the problem-solving process of graphing the p-norm unit ball in 3D using the Plotly graphing library in Python (and JavaScript).
+            <a href="https://observablehq.com/@mimmackk/unitball">JavaScript</a>
+            <a href="http://mimmackk.github.io/unitball">Python</a>
+            How to graph a sphere, a cube, an octahedron, and every continuous shape in between with one function. A walk through the problem-solving process of graphing the p-norm unit ball in 3D using the Plotly graphing library.
           </p>
-          <a href="http://mimmackk.github.io/unitball"><img src="https://raw.githubusercontent.com/mimmackk/unitball/master/head.jpg" alt="Screenshot of project"></a>
+          <a href="https://observablehq.com/@mimmackk/unitball"><img src="https://raw.githubusercontent.com/mimmackk/unitball/master/head.jpg" alt="Screenshot of project"></a>
         </li>
         <li>
           <h3><a href="https://mimmackk.github.io/hopfield/">Hopfield Network Simulation</a></h3>
